--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/slate@v0.2.0
-gem "github-pages", group: :jekyll_plugins
-title: [Power Outage]
-description: [Project 3 for DSC80 at UCSD]
-show_downloads: ['true']
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: [Power Grid Attacks Analysis]
